# Test_work

./: README.md  config.yml  pyproject.toml  run.py  server.py  utils.py
src/api/: db_api.py  middlewares.py  pillow_manager.py  routes.py  views.py
src/models/: configurations.py  models.py
tests/: conftest.py  test_auth.py
tests/tests_integration/: test_get_image.py  test_modify_image.py  test_upload_image.py
